--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -22,5 +22,7 @@
         </p>
         <p>{{ blog_form.submit() }}</p>
         <p>New User? <a href="{{ url_for('register') }}">Click to Register!</a></p>
+        <p>Forgot Your Password?
+        <a href="{{ url_for('reset_password_request') }}">Click to Reset It</a></p>
     </form>
 {% endblock %}
